--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 15px;
   /* height:100px; */
   width:100vw;
   /* padding:50px; */
-  padding: 20px 0px;
+  padding: 30px 0px;
   letter-spacing: 5px;
   text-align:center;
 }
@@ -48,7 +48,7 @@
 .navbar a {
   text-decoration: none;
   color:gray;
-  font-size: 15px;
+  font-size: 12px;
   letter-spacing: 4px;
   font-weight: 400;
   width: 100px;
@@ -107,7 +107,7 @@ header a  {
 }
 
 .emoticon-pic {
-  height:450px;
+  height:250px;
   width:150px;
   align-self: center;
   /* border:1px solid black; */
@@ -132,7 +132,6 @@ header a  {
 .form-child {
   height:50%;
   width:80%;
-  /* border: 1px solid black; */
 }
 
 
@@ -153,6 +152,8 @@ textarea {
   margin-bottom:20px;
   width:80%;
   height:150px;
+  font-size:20px;
+  padding:15px;
 }
 
 label input {
@@ -161,13 +162,17 @@ label input {
 }
 
 input[type=submit] {
-  padding:30px;
-  width:80%;
+  padding:10px;
+  width:86%;
+  border: 1px solid gray;
 } 
 
-input[type=text] {
-  text
+input, #name  {
+  font-size: 20px;
+  padding:15px;
 }
+
+
 
 
 /* about page styling */
