--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  font-size: 15px;
+  font-size: 14px;
   /* height:100px; */
   width:100vw;
   /* padding:50px; */
@@ -48,7 +48,7 @@
 .navbar a {
   text-decoration: none;
   color:gray;
-  font-size: 12px;
+  font-size: 10px;
   letter-spacing: 4px;
   font-weight: 400;
   width: 100px;
@@ -165,6 +165,7 @@ input[type=submit] {
   padding:10px;
   width:86%;
   border: 1px solid gray;
+  color:gray;
 } 
 
 input, #name  {
