--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ header a  {
   width:50%;
   display:flex;
   justify-content: center;
-  align-items: center;
 }
 
 .coffee-child {
@@ -107,7 +106,7 @@ header a  {
 }
 
 .emoticon-pic {
-  height:250px;
+  height:450px;
   width:150px;
   align-self: center;
   /* border:1px solid black; */
@@ -126,7 +125,7 @@ header a  {
   width:50%;
   display:flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 100px;
 } 
 
 .form-child {
