--- a/blog.css
+++ b/blog.css
@@ -33,9 +33,9 @@
 }
 
 .navbar {
-  display:flex;
+  /* display:flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   /* height:100px; */
   /* width:100vw; */
 }
@@ -45,7 +45,7 @@
   padding-left: 0px;
   display: flex;
   justify-content: space-between;
-  width: 400px;
+  /* width: 400px; */
 }
 .navbar a {
   text-decoration: none;
@@ -53,7 +53,7 @@
   font-size: 10px;
   letter-spacing: 4px;
   font-weight: 400;
-  width: 100px;
+  /* width: 100px; */
 }
 
 a:hover {
@@ -237,7 +237,9 @@ section-1 h3, section-2 h3 {
 }
 
 .blog-main-content {
-  margin:70px 150px 0 150px;
+  /* margin:70px 150px 0 150px; */
+  max-width:700px;
+  margin: 0 auto;
   border-bottom:2px solid #6599FF;
   font-size: 15px;
   line-height: 1.8em;
