fixing blog page

--- a/blog.css
+++ b/blog.css
@@ -13,7 +13,7 @@
 /* need to find a better quality picture!!!!! */
 .container1 {
   height:100vh;
-  width:100vw;
+  /* width:100vw; */
 }
 
 /* header styling */
@@ -25,7 +25,7 @@
   align-items: center;
   font-size: 14px;
   /* height:100px; */
-  width:100vw;
+  /* width:100vw; */
   /* padding:50px; */
   padding: 30px 0px;
   letter-spacing: 5px;
@@ -44,7 +44,7 @@
   list-style-type: none;
   padding-left: 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   /* width: 400px; */
 }
 .navbar a {
@@ -268,7 +268,7 @@ h3 a:hover {
  
  
  .footer-container {
-  width:100vw;
+  /* width:100vw; */
   height:160px;
   background-color:#d3d3d3;
   margin: 0px 0px 0px 0px;
@@ -287,10 +287,15 @@ h3 a:hover {
 
 .icons {
   height: 100px;
-  width:500px;
+  max-width:500px;
   display: flex;
   justify-content: space-around;
 }
+
+.badge-margin {
+  margin: 0px 5px;
+}
+
 .badge1 {
   height:50px;
   width:50px;
