--- a/about.css
+++ b/about.css
@@ -3,15 +3,11 @@
 
 * {
   margin: 0px 0px 0px 0px;
-  /* background-image: url("./image.jpeg"); */
-  /* background-repeat: no-repeat; */
-  /* background-position: center;      */
-  /* background-size: cover; */
   font-family: 'Montserrat', Arial, sans-serif;
   }
 
 /* need to find a better quality picture!!!!! */
-.container1 {
+.container2 {
   height:100vh;
   width:100vw;
 }
@@ -24,9 +20,7 @@
   justify-content: center;
   align-items: center;
   font-size: 14px;
-  /* height:100px; */
-  width:100vw;
-  /* padding:50px; */
+  max-width:800px;
   padding: 30px 0px;
   letter-spacing: 5px;
   text-align:center;
@@ -36,8 +30,6 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  /* height:100px; */
-  /* width:100vw; */
 }
 
 .navbar ul{
@@ -66,132 +58,41 @@ header a  {
   text-decoration: none;
 }
 
-/* contact page styling */
-
-.container3 {
-  height:calc(100vh - 160px);
-  width:100vw;
-  /* border:1px solid black; */
-  display:flex; 
-  flex-direction: row;
-  justify-content: center;
-  background-color:#e7feff;
-}
-
-.coffee {
-  width:50%;
-  display:flex;
-  justify-content: center;
-}
-
-.coffee-child {
-  height:80%;
-  width:80%;
-  padding-top: 100px;
-  display:flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.coffee-child h1 {
-  color:black;
-  /* text-align: center; */
-  letter-spacing: 5px;
-  width:100%;
-}
-
- .coffee-child p {
-  line-height: 1.8em;
-  font-size: 15px;
-  width:100%;
-}
-
-
-/* form styling */
-
-.form {
-  width:50%;
-  display:flex;
-  justify-content: center;
-  margin-top: 100px;
-} 
-
-.form-child {
-  height:50%;
-  width:80%;
-}
-
-
-form label {
-  padding-bottom:20px;
-  margin-bottom:20px;
-  letter-spacing: 4px;
-}
-
-form input {
-  width:80%;
-  padding-bottom:20px;
-  margin-bottom:20px;
-}
-
-textarea {
-  margin-bottom:20px;
-  width:80%;
-  height:150px;
-  font-size:20px;
-  padding:15px;
-  border: 1px solid gray;
-}
-
-label input {
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-}
-
-input[type=submit] {
-  padding:10px;
-  width:80%;
-  border: 1px solid gray;
-  color:gray;
-} 
-
-input, #name  {
-  font-size: 20px;
-  padding:15px;
-}
-
-
-
 
 /* about page styling */
 
 .container2 {
-  height:100vh;
-  width: 100vw;
+  height:800px;
+  max-width: 800px;
 }
 
 .about  {
   display:flex;
   justify-content: center;
   font-size: 20px;
-  /* height:100px; */
-  width:100vw;
-  /* padding:50px; */
+  max-width:800px;
   padding: 20px 0px;
   letter-spacing: 5px;
 }
 
 .about-main-content {
-  margin:70px 150px 0 150px;
-  border-bottom:2px solid #6599FF;
+  max-width:800px;
+  margin: 0 auto;
   font-size: 15px;
   line-height: 1.8em;
 }
 
-.about-main-content a {
+section-1 p a {
   text-decoration: none;
-  color: #6599FF;
+  color:#6599FF;
 }
+
+section-1 p a:hover {
+  font-weight: bold;
+  color:#6599FF;
+}
+
+
 section-1 h3, h5, p {
   margin:25px;
 }
@@ -217,56 +118,11 @@ section-1 h3, section-2 h3 {
   font-size: 15px;
 }
 
-
-/* blog page */
-
-.container4 {
-  height:100vh;
-  width:100vw;
-}
-
-.blog {
-  display:flex;
-  justify-content: center;
-  font-size: 20px;
-  /* height:100px; */
-  width:100vw;
-  padding: 20px 0px;
-  /* padding:50px; */
-  letter-spacing: 5px;
-}
-
-.blog-main-content {
-  margin:70px 150px 0 150px;
-  border-bottom:2px solid #6599FF;
-  font-size: 15px;
-  line-height: 1.8em;
-}
-
-.blog-main-content #blog-title {
-  color:#6599FF;
-}
-
-h3 a {
-  text-decoration: none;
-  color:black;
-}
-
-h3 a:hover {
-  color:#6599FF;
-  font-weight: bold;
-}
-
-#last-blog-spacing {
-  margin-bottom: 50px;
-}
-
-
 /* footer styling */
  
  
  .footer-container {
-  width:100vw;
+  max-width:800px;
   height:160px;
   background-color:#d3d3d3;
   margin: 0px 0px 0px 0px;
@@ -274,7 +130,6 @@ h3 a:hover {
   justify-content: center;
   align-items:center;
   flex-direction: column;
-  /* border: 1px solid; */
 }
 
 .footer-header h2 {
