--- a/blog-post-1.css
+++ b/blog-post-1.css
@@ -61,31 +61,26 @@ header a  {
 /* blog-one styling */
 
 .blog-post-container {
-  height:100vh;
-  width:100vw;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.blog-one-content {
-  height:80%;
-  width:60%;
-}
+  height:800px;
+  max-width:800px;
+  margin: 0 auto;
+} 
 
 .blog-one-content h3 {
   color:#6599FF;
   text-align:center;
   margin-bottom: 30px;
   letter-spacing: 2px;
+  margin-top: 20px;
 }
 
 .blog-one-content p {
   line-height: 1.8em;
-  text-align: left;
+  margin:15px;
 }
 
 #date {
   margin-bottom: 20px;
   font-size:12px;
 }
+
