--- a/blog.css
+++ b/blog.css
@@ -29,19 +29,17 @@
 }
 
 .navbar {
-  /* display:flex;
+  display:flex;
   justify-content: center;
-  align-items: center; */
-  /* height:100px; */
-  /* width:100vw; */
+  align-items: center;
 }
 
 .navbar ul {
   list-style-type: none;
   padding-left: 0px;
   display: flex;
-  justify-content: space-around;
-  /* width: 400px; */
+  justify-content: space-between;
+  width: 400px;
 }
 .navbar a {
   text-decoration: none;
@@ -84,10 +82,6 @@ header a  {
   margin: 0 auto;
   font-size: 15px;
   line-height: 1.8em;
-}
-
-.blog-main-content #blog-title {
-  color:#6599FF;
 }
 
 h3 a {
