--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@
   font-family: 'Montserrat', Arial, sans-serif;
   }
 
-/* need to find a better quality picture!!!!! */
+
+.main-pic {
+  background-image: url("main.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 .container1 {
   height:100vh;
   max-width:100vw;
