--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ form input {
   width:80%;
   padding-bottom:20px;
   margin-bottom:20px;
+  border: 1px solid gray;
 }
 
 textarea {
@@ -283,7 +284,7 @@ h3 a:hover {
 
 .icons {
   height: 100px;
-  width:500px;
+  width:350px;
   display: flex;
   justify-content: space-around;
 }
