--- a/style.css
+++ b/style.css
@@ -165,32 +165,37 @@ input, #name  {
 /* about page styling */
 
 .container2 {
-  height:100vh;
-  width: 100vw;
+  height:800px;
+  max-width: 800px;
 }
 
 .about  {
   display:flex;
   justify-content: center;
   font-size: 20px;
-  /* height:100px; */
-  width:100vw;
-  /* padding:50px; */
+  max-width:800px;
   padding: 20px 0px;
   letter-spacing: 5px;
 }
 
 .about-main-content {
-  margin:70px 150px 0 150px;
-  border-bottom:2px solid #6599FF;
+  max-width:800px;
+  margin: 0 auto;
   font-size: 15px;
   line-height: 1.8em;
 }
 
-.about-main-content a {
+section-1 p a {
   text-decoration: none;
-  color: #6599FF;
+  color:#6599FF;
 }
+
+section-1 p a:hover {
+  font-weight: bold;
+  color:#6599FF;
+}
+
+
 section-1 h3, h5, p {
   margin:25px;
 }
@@ -217,48 +222,68 @@ section-1 h3, section-2 h3 {
 }
 
 
+
 /* blog page */
 
-.container4 {
-  height:100vh;
-  width:100vw;
+.container1 {
+  height:800px;
+  max-width:800px;
 }
 
 .blog {
   display:flex;
   justify-content: center;
   font-size: 20px;
-  /* height:100px; */
-  width:100vw;
+  width:800px;
   padding: 20px 0px;
-  /* padding:50px; */
   letter-spacing: 5px;
 }
 
 .blog-main-content {
-  margin:70px 150px 0 150px;
-  border-bottom:2px solid #6599FF;
+  max-width:800px;
+  margin: 0 auto;
   font-size: 15px;
   line-height: 1.8em;
 }
 
-.blog-main-content #blog-title {
-  color:#6599FF;
-}
-
 h3 a {
   text-decoration: none;
-  color:black;
+  color:#6599FF;
 }
 
 h3 a:hover {
+  font-size: 16px;
   color:#6599FF;
-  font-weight: bold;
 }
 
 #last-blog-spacing {
   margin-bottom: 50px;
 }
+
+section-1 h3, h5, p {
+  margin:25px;
+}
+
+section-1 h3, section-2 h3 {
+  color:black;
+  letter-spacing: 5px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+section-1 h3 {
+  font-weight: 400;
+}
+
+section-1 #blog-header {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+
+
+
 
 
 /* footer styling */
@@ -273,7 +298,6 @@ h3 a:hover {
   justify-content: center;
   align-items:center;
   flex-direction: column;
-  /* border: 1px solid; */
 }
 
 .footer-header h2 {
@@ -332,5 +356,37 @@ h3 a:hover {
   background-image: url(./facebook.jpeg);
   background-size: cover;
 }
+
+/* blog post styling */
+
+.blog-post-container {
+  height:800px;
+  max-width:800px;
+  margin: 0 auto;
+} 
+
+.blog-one-content h3 {
+  color:#6599FF;
+  text-align:center;
+  margin-bottom: 30px;
+  letter-spacing: 2px;
+  margin-top: 20px;
+}
+
+.blog-one-content p {
+  line-height: 1.8em;
+  margin:15px;
+}
+
+#date {
+  margin-bottom: 20px;
+  font-size:12px;
+}
+
+
+img {
+  margin:15px;
+}           
+
 
 
